[gd_scene load_steps=2 format=3 uid="uid://bu2y5gs633ffq"]

[ext_resource type="Script" uid="uid://ed7c0gic156i" path="res://menu/LevelUp.gd" id="1_t0j8j"]

[node name="LevelUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0j8j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "LEVEL UP!"
horizontal_alignment = 1
uppercase = true

[node name="PointsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pontos disponíveis: 3"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Selecione os atributos para melhorar:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VitalityButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+1 Vitalidade"

[node name="StrengthButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+1 Força"

[node name="AgilityButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+1 Agilidade"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar"
